# teepee-clicker

./: .gitignore  start.sh
backend/: .gitignore  lole  pyproject.toml  start.sh
backend/src/: __init__.py  config.py  exceptions.py  middleware.py  openapi.py  security.py  snowflakes.py  storage.py  types.py  util.py
backend/src/controllers/: __init__.py  global_count.py  sessions.py  upgrade.py  upgrades.py  user.py  users.py  websocket.py
backend/src/models/: __init__.py  base.py  session.py  upgrade.py  user.py
frontend/: .gitignore  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
frontend/src/actions/: auth.ts  common.ts
frontend/src/app/: context.tsx  layout.tsx  page.tsx  types.ts
frontend/src/app/game/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: header.tsx
frontend/src/components/auth/: index.ts  login.form.tsx  logout.button.tsx
frontend/src/components/clickables/: clickables.button.tsx  clickables.link.tsx  index.ts
frontend/src/components/forms/: form.button.submit.tsx  form.input.text.tsx  index.ts
frontend/src/components/game/: game.container.tsx  game.tsx  index.ts
frontend/src/components/pets/: index.ts  pets.panel.tsx  pets.star.tsx
frontend/src/components/upgrades/: upgrades.item.tsx  upgrades.panel.tsx
frontend/src/layout/: header.tsx
frontend/src/layout/auth/: logout.button.tsx  signup.form.tsx
frontend/src/layout/clicker/: clicker.button.tsx  clicker.panel.tsx  index.ts
frontend/src/layout/upgrades/: index.ts  upgrades.item.tsx  upgrades.panel.tsx
frontend/src/styles/: global.css
