[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project]
name            = "backend"
requires-python = ">=3.13,<4.0"
dynamic         = [ "dependencies" ]


[tool.poetry]
package-mode    = false
requires-poetry = ">=2.0"

[tool.poetry.dependencies]

[tool.poetry.group.dev.dependencies]


[tool.pyright]
include                 = ["src"]
pythonVersion           = "3.13"
typeCheckingMode        = "strict"
useLibraryCodeForTypes  = true
reportUnknownMemberType = false


[tool.ruff]
target-version = "py313"
line-length    = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # isort
    "I001", "I002",
    # todos / fixme
    "TD002", "TD003", "FIX001",
    "FIX002", "FIX003", "FIX004",
    # docstrings
    "D100", "D101", "D102", "D103", "D104",
    "D105", "D106", "D107", "D203", "D212",
    # misc
    "ERA001", "ARG001", "F403", "B904", "E731", "TRY301", "RUF012",
    "T201", "N818", "COM819",  "PLR0913", "ANN401", "S101", "RUF022",
    "PLR2004", "SIM10", "TC001", "TC002", "TC003", "INP001", "A005", "COM812",
]


[tool.isort]
line_length            = 120
lines_after_imports    = 2
multi_line_output      = 9
include_trailing_comma = true
extra_standard_library = ["typing_extensions"]